# comic-nodrm

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: build.yml
src/comic_nodrm/: epub.py  gui.py  kindle.py  kobo.py  setting.py  text_util.py
